k8s/overlays/eks/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-monitoring-ingress
  namespace: ai-monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 8000
          - path: /ml
            pathType: Prefix
            backend:
              service:
                name: ml-anomaly-detector
                port:
                  number: 8001
